--- a/package.json
+++ b/package.json
@@ -3,11 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.1.2",
+    "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "jsonfile": "^5.0.0",
+    "material-ui": "^0.20.2",
+    "material-ui-search-bar": "^1.0.0-beta.12",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-date-picker": "^6.12.1",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.5.2",
+    "react-moment": "^0.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "react-search-field": "0.0.3",
+    "react-tap-event-plugin": "^3.0.3",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
