--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "react-datepicker": "^1.6.0",
     "react-dom": "^16.5.2",
     "react-moment": "^0.8.1",
+    "react-quill": "^1.3.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-search-field": "0.0.3",
     "react-tap-event-plugin": "^3.0.3",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "semantic-ui-react": "^0.82.5"
   },
   "scripts": {
     "start": "react-scripts start",
