--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "json-loader": "^0.5.7",
     "jsonfile": "^5.0.0",
     "material-ui": "^0.20.2",
+    "material-ui-flat-pagination": "^3.0.1",
     "material-ui-search-bar": "^1.0.0-beta.12",
     "moment": "^2.22.2",
     "react": "^16.5.2",
