--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,5 @@ Django==2.1.2
 django-cors-headers==2.4.0
 djangorestframework==3.8.2
 psycopg2==2.7.5
-gunicorn==19.7.1
-django-heroku==0.3.1
+django-allauth==0.38.0
 django-rest-auth==0.9.3
-django-storages==1.7.1
-boto3==1.9.20
-pillow==5.3.0
-python-decouple==3.1
