--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.5.2",
     "react-moment": "^0.8.1",
     "react-quill": "^1.3.1",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
@@ -28,6 +29,7 @@
     "react-table": "^6.8.6",
     "react-tap-event-plugin": "^3.0.3",
     "reactstrap": "^6.4.0",
+    "redux": "^4.0.0",
     "semantic-ui-react": "^0.82.5"
   },
   "scripts": {
