--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.3",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
