--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.2.0",
+    "@material-ui/icons": "^3.0.1",
     "jquery": "^3.3.1",
+    "material-ui": "^0.20.2",
+    "material-ui-search-bar": "^1.0.0-beta.12",
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
