--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,16 +6,19 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "classnames": "^2.2.6",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.2",
+    "material-ui-flat-pagination": "^3.0.1",
     "material-ui-search-bar": "^1.0.0-beta.12",
     "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.3",
+    "react-scripts": "^2.0.3",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
