--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,14 @@
 {
-  "proxy": "http://localhost:8000",
+  "proxy": "http://localhost:8000/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.2.0",
+    "bootstrap": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "font-awesome": "^4.7.0"
+  }
 }
