--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,15 @@
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-alert": "^4.0.4",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-dropdown-menu": "^1.1.15",
     "react-dom": "^16.5.2",
     "react-quill": "^1.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "^2.0.3",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
