--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "circular-json": "^0.5.7",
     "classnames": "^2.2.6",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.2",
-    "material-ui-flat-pagination": "^3.0.1",
+    "material-ui-flat-pagination": "^3.0.2",
     "material-ui-search-bar": "^1.0.0-beta.12",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
