--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^4.3.1",
     "react-s-alert": "^1.4.1",
     "react-scripts": "^2.0.3",
+    "react-select": "^2.1.0",
     "react-sortable-hoc": "^0.8.3",
     "react-toastify": "^4.4.0",
     "redux": "^4.0.0",
