--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "react-toastify": "^4.4.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.82.5"
+    "semantic-ui-react": "^0.82.5",
+    "font-awesome":"^4.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
